--- a/style.css
+++ b/style.css
@@ -9,11 +9,11 @@ body {
 h1 {
     font-size: 48px;
     text-align: center;
-    color: darkblue;
+    color: rgb(87, 51, 87);
 }
 
 h2 {
-    color: rgb(87, 51, 87);
+    color: slateblue;
 }
 
 .role {
